<resources>
    <string name="app_name">MyBooks</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="isbn_format">ISBN: %s</string>
    <string name="book_cover_image">Book cover image</string>
    <string name="book_rating_star">★</string>
    <string name="book_details">Details</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_pages">Pages</string>
    <string name="book_language">Language</string>
    <string name="book_categories">Categories</string>
    <string name="book_description">Description</string>
    <string name="save_book">Save book</string>
    <string name="remove_book">Remove book</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="go_to_register">Don\'t have an account? Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_an_account">Create an account</string>
    <string name="go_to_login">Already have an account? Login</string>
    <string name="search_your_book">Search your book</string>
    <string name="search_hint_title">Start searching</string>
    <string name="search_hint_message">Enter a book title, author, or ISBN to find books</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="use_email_and_password">Use email and password</string>
    <string name="profile_icon">Profile icon</string>
    <string name="logging_in">Logging in…</string>
    <string name="creating_account">Creating account…</string>
    <string name="saved_books">%d saved books</string>
    <string name="my_library">My Library</string>
    <string name="library_is_empty">Library is empty</string>
    <string name="search_and_add_books">Search and add books to see them here</string>
    <string name="book_publisher_year">%s • %s</string>
    <string name="book_removed">Book removed from library</string>
    <string name="book_saved">Book saved into library</string>
    <string name="ratings">%d ratings</string>
    <string name="pages">%d pages</string>
    <string name="you_are_offline">You are offline</string>
    <string name="account_info">Account Information</string>
    <string name="actions">Actions</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_dialog">Delete account?</string>
    <string name="delete_account_message">This action will be irreversible. Are you sure?</string>
    <string name="delete_account_confirm">Yes</string>
    <string name="delete_account_cancel">No</string>
    <string name="delete_account_error">Error</string>
    <string name="delete_account_error_message">Unable to delete account.</string>
    <string name="ok">OK</string>
    <string name="connection_error">"Connection error: "</string>
    <string name="no_results_found_for">"No results found for : "</string>
    <string name="api_error">"API error: "</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>